tests/snapshots/roblox_service_acquisition__module-0.snap
---
source: tests/roblox_service_acquisition.rs
expression: generated_luau
---
--!strict

local function main(): ()
    const players: Players = game:GetService("Players")
    const storage: ReplicatedStorage = game:GetService("ReplicatedStorage")
    const data_stores: DataStoreService = game:GetService("DataStoreService")
    const scripts: ServerScriptService = game:GetService("ServerScriptService")
end

main()
