tests/snapshots/roblox_service_acquisition__module-1.snap
---
source: tests/roblox_service_acquisition.rs
expression: generated_luau
---
--!strict

local function main(): ()
    const players: Players = game:GetService("Players")
    const storage: ReplicatedStorage = game:GetService("ReplicatedStorage")
    const input: UserInputService = game:GetService("UserInputService")
end

main()
